--- a/myfinance-web-dotnet/myfinance-web-dotnet.csproj
+++ b/myfinance-web-dotnet/myfinance-web-dotnet.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>myfinance_web_dotnet</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.8" />
+  </ItemGroup>
+
 </Project>
